Bug 114166  -  Refactoring of 'Main' tab for Java type launch configurations